# amberol-fork

./: .editorconfig  .gitignore  .gitlab-ci.yml  .typos.toml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  io.bassi.Amberol.Devel.json  io.bassi.Amberol.json  io.replydev.Amberol.json  meson.build
.github/workflows/: build.yml
.reuse/: dep5
build-aux/: checks.sh
data/: io.bassi.Amberol.appdata.xml.in  io.bassi.Amberol.appdata.xml.in.in  io.bassi.Amberol.desktop.in  io.bassi.Amberol.desktop.in.in  io.bassi.Amberol.gschema.xml  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  be.po  da.po  de.po  el.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ka.po  ko.po  lt.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: amberol.gresource.xml  application.rs  config.rs.in  cover_picture.rs  drag_overlay.rs  i18n.rs  main.rs  meson.build  playback_control.rs  player.rs  playlist_view.rs  queue_row.rs  search.rs  song.rs  song_details.rs  sort.rs  utils.rs  volume_control.rs  waveform_view.rs  window.rs
src/audio/: controller.rs  cover_cache.rs  gst_backend.rs  inhibit_controller.rs  mod.rs  mpris_controller.rs  player.rs  queue.rs  shuffle.rs  song.rs  state.rs  waveform_generator.rs
src/gtk/: help-overlay.ui  playback-control.ui  playlist-view.ui  queue-row.ui  song-details.ui  style-hc.css  style.css  window.ui
