# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "amberol"
version = "0.1.0"
edition = "2018"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.4", package = "gtk4" }

[dependencies.adw]
package = "libadwaita"
version  = "0.1.0"
